# ben-mutt

./: .gitignore  CLEANUP.md  README.md  pyproject.toml
bem/: config.py  log.py  main.py
bem/ai/: __init__.py  agent.py  commands.py  copilot.py  memory.py  presence.py  tips.py  tools.py
bem/calendar/: __init__.py  client.py  ics.py
bem/gchat/: __init__.py  client.py
bem/gmail/: __init__.py  auth.py  client.py  models.py
bem/tui/: __init__.py  app.py  tree.py
bem/tui/screens/: __init__.py  _inbox_shared.py  compose.py  help.py  inbox.py  inbox_agent.py  inbox_calendar.py  inbox_compose.py  inbox_copilot.py
bem/tui/widgets/: __init__.py  agent_panel.py  ai_panel.py  command_bar.py  copilot_panel.py  folder_list.py  message_list.py  message_preview.py
docs/: copilot-build-plan.md  copilot-design.md  launch-post.md
scripts/: smoke_gmail.py
tests/: conftest.py  test_agent_loop.py  test_agent_panel.py  test_agent_tools.py  test_ai_commands.py  test_ai_panel.py  test_calendar.py  test_chat.py  test_client_mime.py  test_command_bar.py  test_compose.py  test_config.py  test_copilot.py  test_curate.py  test_editor.py  test_folder_list.py  test_memory.py  test_message_list.py  test_models.py  test_move.py  test_presence.py  test_preview_links.py  test_theme.py  test_tips.py  test_tree.py  test_triage_parse.py  test_triage_style.py
