[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bem"
version = "0.1.0"
description = "A modern Mutt-inspired CLI email client for Google Workspace"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "textual>=8,<9",
    "google-api-python-client>=2.120",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
    "anthropic>=0.40",
    "click>=8.1",
    "rich>=13.0",
    "html2text>=2024.2.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=1.0"]

[project.scripts]
bem = "bem.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["bem*"]
